<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pagination</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="blogger">Blogger</string>
    <string name="digg">Digg</string>
    <string name="facebook">Facebook</string>
    <string name="flickr">Flickr</string>
    <string name="google">Google</string>
    <string name="lastfm">Lastfm</string>
    <string name="linkedin">Linkedin</string>
    <string name="live">Live</string>
    <string name="orkut">Orkut</string>
    <string name="rss">RSS</string>
    <string name="technorati">Technorati</string>
    <string name="twitter">Twitter</string>
    <string name="wordpress">Wordpress</string>
    <string name="yahoo">Yahoo</string>
    <string name="youtube">Youtube</string>
    
</resources>