<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/blogger"
        android:icon="@drawable/blogger"
        android:title="@string/blogger">
    </item>
    <item
        android:id="@+id/digg"
        android:icon="@drawable/digg"
        android:title="@string/digg">
    </item>
    <item
        android:id="@+id/facebook"
        android:icon="@drawable/facebook"
        android:title="@string/facebook">
    </item>
    <item
        android:id="@+id/flicker"
        android:icon="@drawable/flickr"
        android:title="@string/flickr">
    </item>
    <item
        android:id="@+id/google"
        android:icon="@drawable/google"
        android:title="@string/google">
    </item>
    <item
        android:id="@+id/lastfm"
        android:icon="@drawable/lastfm"
        android:title="@string/lastfm">
    </item>
    <item
        android:id="@+id/linkedin"
        android:icon="@drawable/linkedin"
        android:title="@string/linkedin">
    </item>
    <item
        android:id="@+id/live"
        android:icon="@drawable/live"
        android:title="@string/live">
    </item>
    <item
        android:id="@+id/orkut"
        android:icon="@drawable/orkut"
        android:title="@string/orkut">
    </item>
    <item
        android:id="@+id/rss"
        android:icon="@drawable/rss"
        android:title="@string/rss">
    </item>
    <item
        android:id="@+id/technorati"
        android:icon="@drawable/technorati"
        android:title="@string/technorati">
    </item>
    <item
        android:id="@+id/twitter"
        android:icon="@drawable/twitter"
        android:title="@string/twitter">
    </item>
    <item
        android:id="@+id/wordpress"
        android:icon="@drawable/wordpress"
        android:title="@string/wordpress">
    </item>
    <item
        android:id="@+id/yahoo"
        android:icon="@drawable/yahoo"
        android:title="@string/yahoo">
    </item>
    <item
        android:id="@+id/youtube"
        android:icon="@drawable/youtube"
        android:title="@string/youtube">
    </item>

</menu>